--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="hero">
-  <div class="nd-flex-content">
-    <div class="hero_content nd-flex-details">
+  <div class="nr_flex_content">
+    <div class="hero_content nr_flex_details">
       <h1 class="hero_content_title">
         Pretty fast & affordable way to book rides.
       </h1>
@@ -14,7 +14,7 @@
         <button class="btn prim_btn">Download app</button>
       </div>
     </div>
-    <div class="hero_bg nd-flex-img">
+    <div class="hero_bg nr_flex_img">
       <!-- <img src="../../../assets/img/hero-bg.png" alt="" /> -->
       <div class="hero_bg_img"></div>
     </div>
@@ -61,8 +61,8 @@
 
 <!-- Download app -->
 <section class="sect download">
-  <div class="container nd-flex-content">
-    <div class="download_content nd-flex-details">
+  <div class="container nr_flex_content">
+    <div class="download_content nr_flex_details">
       <h2 class="download_content_title">Comrade, you no go like book ride?</h2>
       <p>
         Pick your destination, request a ride, meet your driver, enjoy the
@@ -79,7 +79,7 @@
         </button>
       </div>
     </div>
-    <div class="nd-flex-img">
+    <div class="nr_flex_img">
       <img src="../../../assets/img/phone.png" alt="" />
     </div>
   </div>
