--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -8,7 +8,7 @@
         class="footer-logo clickable"
         routerLink="/"
       /> -->
-      <h2>NuDrive</h2>
+      <h2 routerLink="/" class="clickable">NuDrive</h2>
       <p>We belive life should be enjoyed to the fullest.</p>
       <div class="footer_about_btns">
         <span class="clickable">
@@ -29,7 +29,7 @@
           <p>Ride</p>
         </li>
         <li class="">
-          <p>Become a driver</p>
+          <p routerLink="/driver-signup">Become a driver</p>
         </li>
         <li class="">
           <p>Request ride online</p>
