--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,14 +1,14 @@
-@import '../../../assets/variables.scss';
+@import '../../../assets/css/variables.scss';
 
 .footer {
   background-color: #e5eaf4;
   background-image: url("../../../assets/img/svg/footer-bg.svg");
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 5rem 0 5rem 0;
-  @media screen and (min-width: 1200px) {
-    padding-top: 13rem;
-  }
+  padding: 6rem 0 5rem 0;
+  // @media screen and (min-width: 1200px) {
+  //   padding-top: 13rem;
+  // }
   p,
   li {
     font-weight: 400;
@@ -66,7 +66,7 @@
     }
   }
   &_copyright {
-    margin-top: 7rem;
+    margin-top: 5rem;
   }
 }
 
