--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import '../src/assets/variables.scss';
+@import '../src/assets/css/variables.scss';
 
 
 *,
@@ -135,35 +135,63 @@ p {
 /* Headings ends */
 
 /* nd flex starts */
-.nd-flex-content {
+// @mixin nd-flex-content($align) {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: $align;
+// }
+.nr_flex_content {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.nd-flex-content.row-reverse {
+.nr_flex_content.row-reverse {
   flex-direction: row-reverse;
 }
-.nd-flex-details {
+.nr_flex_details {
   flex-basis: 50%;
 }
-.nd-flex-details h3 {
-  margin-bottom: 1.5rem;
+.nr_flex_details .nr_flex_details_title {
+  margin-bottom: 1rem;
 }
-.paragh {
+/* .paragh {
   margin: 1.5rem 0 2rem 0;
+} */
+.nr_flex_details .btn {
+  margin-top: 2rem;
 }
-.nd-flex-img {
+.nr_flex_img {
   flex-basis: 40%;
-  // text-align: center;
+  text-align: center;
 }
-.nd-flex-img img {
+.nr_flex_img img {
   max-width: 100%;
   height: auto;
 }
 @media only screen and (max-width: 670px) {
-  .nd-flex-content {
+  .nr_flex_content {
     display: grid;
     grid-gap: 2rem;
   }
 }
-/* nd flex ends */
+/* nr_flex_ends */
+
+
+//-- Card ends --//
+.card {
+  display: grid;
+  grid-gap: 2rem;
+  @media only screen and (min-width: 450px) {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+  &_item {
+    text-align: center;
+    img {
+      margin-bottom: $m-3;
+    }
+    p {
+      margin-top: $m-2;
+    }
+  }
+}
+//-- Card ends --//
